--- a/app/src/main/res/layout/cell_card_list.xml
+++ b/app/src/main/res/layout/cell_card_list.xml
@@ -30,5 +30,16 @@
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true" />
+
+        <ImageView
+            android:id="@+id/cardImage"
+            android:layout_height="50sp"
+            android:layout_width="50sp"
+            tools:background="@color/colorPrimaryDark"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
