--- a/app/src/main/res/layout/cell_card_list.xml
+++ b/app/src/main/res/layout/cell_card_list.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/card_view"
+    android:id="@+id/cardView"
     android:layout_margin="5dp"
     card_view:cardCornerRadius="12dp"
     card_view:cardElevation="3dp"
