--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -8,32 +8,43 @@
     tools:context="com.br.desafiohf.SplashScreenActivity">
 
     <TextView
-        android:text="F"
+        android:text="P"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="33dp"
         android:id="@+id/textView"
         android:textSize="100sp"
-        android:layout_below="@+id/textView2"
+        android:layout_marginLeft="28dp"
+        android:layout_marginStart="28dp"
+        android:textAlignment="center"
+        android:layout_alignBaseline="@+id/textView2"
+        android:layout_alignBottom="@+id/textView2"
         android:layout_toRightOf="@+id/textView2"
         android:layout_toEndOf="@+id/textView2"
-        android:layout_marginLeft="26dp"
-        android:layout_marginStart="26dp"
-        android:textAlignment="center"
         android:textStyle="normal|bold" />
 
     <TextView
         android:text="H"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="138dp"
+        android:layout_marginTop="168dp"
         android:id="@+id/textView2"
         android:textSize="100sp"
-        android:layout_marginLeft="105dp"
-        android:layout_marginStart="105dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:textAlignment="center"
-        android:textStyle="normal|bold" />
+        android:textStyle="normal|bold"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/textView3"
+        android:layout_alignStart="@+id/textView3" />
+
+    <TextView
+        android:text="Cards"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView3"
+        android:textSize="80sp"
+        android:textAlignment="center"
+        android:textStyle="normal|bold"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
